Update on Overleaf.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,24 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
+\documentclass[12pt,MSc,twoside]{muthesis}
+
+\usepackage{amsmath,amssymb}
+
 \begin{document}
-(Type your content here.)
+
+\iffalse 
+	\input{preamble.tex} 
+\fi
+
+
+
+\chapter{Introduction}
+This chapter covers the background material for my thesis and introduces
+the notation that I will use throughout.
+
+
+
+
+\bibliography{bibliography}
+\bibliographystyle{plain}
+
+
 \end{document}
