--- a/main.tex
+++ b/main.tex
@@ -11,6 +11,9 @@
 
 
 \chapter{Introduction}
+% * <billyweir1@gmail.com> 2018-05-09T14:34:44.615Z:
+%
+% ^.
 This chapter covers the background material for my thesis and introduces
 the notation that I will use throughout.
 
