Starting point for introduction.

--- a/main.tex
+++ b/main.tex
@@ -10,13 +10,7 @@
 
 
 
-\chapter{Introduction}
-% * <billyweir1@gmail.com> 2018-05-09T14:34:44.615Z:
-%
-% ^.
-This chapter covers the background material for my thesis and introduces
-the notation that I will use throughout.
-
+\input{introduction.tex}
 
 
 
