Add oomph-lib reference for Helmholtz

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,4 @@
-@book{sommerfeld1949partial,
+@book{sommerfeld,
   title={Partial differential equations in physics},
   author={Sommerfeld, Arnold},
   volume={1},
@@ -6,7 +6,7 @@
   publisher={Academic press}
 }
 
-@book{leveque2007finite,
+@book{leveque,
   title={Finite Difference Methods for Ordinary and Partial Differential Equations: Steady-State and Time-Dependent Problems},
   author={LeVeque, R.J.},
   isbn={9780898717839},
@@ -16,3 +16,5 @@
   year={2007},
   publisher={Society for Industrial and Applied Mathematics (SIAM, 3600 Market Street, Floor 6, Philadelphia, PA 19104)}
 }
+
+@misc{oomph-hh, title={Theory: The Helmholtz equation for time-harmonic scattering problems}, url={http://oomph-lib.maths.man.ac.uk/doc/helmholtz/scattering/html/index.html}, journal={oomph-lib: Example problem: The Helmholtz equation -- scattering problems}}
