Cleanup and add additional field for oomph ref.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -17,4 +17,9 @@
   publisher={Society for Industrial and Applied Mathematics (SIAM, 3600 Market Street, Floor 6, Philadelphia, PA 19104)}
 }
 
-@misc{oomph-hh, title={Theory: The Helmholtz equation for time-harmonic scattering problems}, url={http://oomph-lib.maths.man.ac.uk/doc/helmholtz/scattering/html/index.html}, journal={oomph-lib: Example problem: The Helmholtz equation -- scattering problems}}
+@misc{oomph_hh, 
+  title={Theory: The Helmholtz equation for time-harmonic scattering problems}, 
+  url={http://oomph-lib.maths.man.ac.uk/doc/helmholtz/scattering/html/index.html}, 
+  journal={oomph-lib: Example problem: The Helmholtz equation -- scattering problems},
+  note={Last accessed: 2018-05-10}
+}
