Hackbusch, multigrid methods

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -23,3 +23,14 @@
   journal={oomph-lib: Example problem: The Helmholtz equation -- scattering problems},
   note={Last accessed: 2018-05-10}
 }
+
+@book{hackbusch,
+  title={Multi-Grid Methods and Applications},
+  author={Hackbusch, W.},
+  isbn={9783540127611},
+  lccn={85014845},
+  series={Springer Series in Computational Mathematics},
+  url={https://books.google.co.uk/books?id=J0DvAAAAMAAJ},
+  year={2003},
+  publisher={Springer Berlin Heidelberg}
+}
