Add chapter headings to main.tex, from others.

--- a/main.tex
+++ b/main.tex
@@ -9,10 +9,13 @@
 \fi
 
 
-
+\chapter{Introduction}
 \input{introduction.tex}
 
+\chapter{Problem description}
 
+\chapter{Multigrid}
+\input{multigrid.tex}
 
 \bibliography{bibliography}
 \bibliographystyle{plain}
