Comments on unstructured grids.

--- a/multigrid.tex
+++ b/multigrid.tex
@@ -29,3 +29,8 @@ Next, on each level of the mesh, the Jacobian matrix resulting from the finite e
 Finally, a suitable iteration procedure that performs smoothing on each level, for example, Jacobi iteration.
 
 
+% UNSTRUCTURED GRIDS
+For unstructured grids, the refinement process is much more subtle.
+Refining 
+
+TODO: comment on how oomph uses refinement
