Section heading on grid hierarchy.

--- a/multigrid.tex
+++ b/multigrid.tex
@@ -28,8 +28,9 @@ Firstly, a hierarchy of meshes that define the multiple levels of the method, as
 Next, on each level of the mesh, the Jacobian matrix resulting from the finite element discretisation must be formed in order to solve the problem at that level.
 Finally, a suitable iteration procedure that performs smoothing on each level, for example, Jacobi iteration.
 
+\section{Grid hierarchy}
 
-% UNSTRUCTURED GRIDS
+\subsection{Unstructured grids}
 For unstructured grids, the refinement process is much more subtle.
 Refining 
 
