Fix build issue caused by command.
No longer need this because we will use \begin{equation}
environment to label equations.

--- a/draft.tex
+++ b/draft.tex
@@ -4,7 +4,7 @@
 \usepackage{natbib,url}
 \setcitestyle{numbers,square}
 
-\newcommand\addtag{\refstepcounter{equation}\tag{\theequation}}
+% \newcommand\addtag{\refstepcounter{equation}\tag{\theequation}}
 
 
 \title{The Helmholtz Equation}
