Create new chapter on FEM.

--- a/main.tex
+++ b/main.tex
@@ -16,6 +16,9 @@
 \chapter{Problem description}
 \input{problem.tex}
 
+\chapter{Finite element method}
+\input{fem.tex}
+
 \chapter{Multigrid}
 \input{multigrid.tex}
 
