Add comments on comparison between Poisson and Helmholtz.

--- a/problem.tex
+++ b/problem.tex
@@ -8,6 +8,16 @@ Boundary condition
 	- PML/ABC/DtN
 Shifted Laplace operator
 
+
+The Poisson problem:
+	- Well behaved
+	- Eigenvalues of the residual
+	- Optimal method for finding solution
+
+Helmholtz problem:
+	- Misbehaved
+	- Poor convergence
+	- Indefinite discretisation matrix
 \fi
 
 We wish to solve the three dimensional Helmholtz equation in Fourier decomposed axisymmetric cylindrical coordinates.
