Add subsection on block preconditioning.

--- a/multigrid.tex
+++ b/multigrid.tex
@@ -71,6 +71,12 @@ Only in the case where optimisation is crucial to the problem or a general preco
 
 
 
+\subsection{Block preconditioning}
+
+% Talk about block preconditioning in regards to complex Helmholtz problem
+% The block structure, derivation...
+
+
 \subsection{Multigrid preconditioning}
 
 As an alternative to using multigrid as an iterative solver, it is possible to instead perform multigrid iterations to partially solve the linear system, then perform a solve with an additional linear solver on the preconditioned system.
