Required package for inserting graphics.

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,7 @@
 \documentclass[12pt,MSc,twoside]{muthesis}
 
 \usepackage{amsmath,amssymb}
+\usepackage{graphicx}
 
 \def \oomph {\texttt{oomph-lib}}
 
