--- a/multigrid.tex
+++ b/multigrid.tex
@@ -10,9 +10,6 @@ Now the solution is transferred back to the fine grid by interpolation and apply
 High frequency components of the error are damped rapidly by a smoother.
 Low frequency components on a coarse mesh are high frequency, thus are damped rapidly by a smoother.
 
-% Insert figure of error components for initial iteration phases, want to show low frequency errors are not dampened.
-% Probably use a 1D Helmholtz problem to do this
-
 The description above is the outline for the two-grid method, on which many other multgrid methods are based \cite{hackbusch}.
 For instance, the MG V-cycle may be thought of as a recursive scheme by performing an additional two-grid iteration on each coarser grid.
 In this sense, we move from a fine mesh to coarser and coarser grids by restriction until we may solve the system directly.
@@ -24,11 +21,111 @@ Next, on each level of the mesh, the Jacobian matrix resulting from the finite e
 Finally, there must be  a suitable smoothing iteration procedure on each level.
 In our case, this is FGMRES, however any appropriate iterative solver will be sufficient.
 
-% Insert figures of the grid hierarchy for 2-grid, V-cycle, etc.
-% Insert figure for how the frequencies decay based on mesh level.
+We will discuss these topics in more depth in the rest of this chapter.
 
 
-\section{Grid hierarchy}
+
+
+
+%------------------------------------------------
+%------------------------------------------------
+
+\subsection{Multigrid cycles}
+
+Multigrid, as an iterative solver
+
+The most common cycles are the V and W-cycles, however there are many more variations of the basic two-grid algorithm, among which are the F and S-cycles.
+Notably, beyond the two-grid method, the V-cycle is the simplest in its symmetry.
+
+The multigrid algorithm consists of iteratively applying one of these cycles until a suitable convergence tolerance is reached.
+As mentioned above, the 
+
+
+
+\begin{figure}
+	% Insert figures of the grid hierarchy for 2-grid, V-cycle, etc.
+	% \includegraphics[]{}
+	\caption{V-cycle, W-cycle, F-cycle, S-cycle}
+\end{figure}
+
+
+
+
+
+
+
+%------------------------------------------------
+%------------------------------------------------
+
+
+\section{Components of a multigrid algorithm}
+
+\subsection{Smoothing}
+
+Smoothing is not used to solve the problem, although on its own the smoother may be used as a convergent iterative solver.
+Instead, the purpose is to reduce the high frequency errors of the solution on the current grid level.
+As mentioned earlier, this is the key idea to multigrid algorithms.
+Smoothing is typically done by a SOR method, such as the weighted Jacobi or Gauss-Seidel methods.
+
+\begin{figure}
+	% Insert figure of error components for initial iteration phases, want to show low frequency errors are not dampened.
+	% Insert figure for how the frequencies decay based on mesh level.
+	% Probably use a 1D Helmholtz problem to do this
+	% \includegraphics[]{}
+	\caption{High frequency errors are damped fast}
+\end{figure}
+
+
+There are two opportunities to perform smoothing operations.
+These occur before the restriction to the coarser level (pre-smoothing), then again after the coarse grid correction is applied to the solution on the finer level (post-smoothing).
+Different multigrid cycles apply different rules to smoothing, such as when to smooth and how many smoothing iterations to perform.
+For example, in the case of a V or W-cycle, both pre-smoothing and post-smoothing are performed.
+However, in the case of an S-cycle, no pre-smoothing operations are performed, and only post-smoothing is applied.
+For certain problems, this can improve performance because of the reduction of the smoothing operations \cite{iyengar}.
+
+The particular choice of smoother in \oomph is between the complex damped Jacobi method and FGMRES.
+Alternatively, one could choose to implement their own smoother to override the default behaviour.
+In this paper, the results and analysis are obtained from using the FGMRES solver.
+
+
+
+\subsection{Prolongation}
+
+Prolongation, sometimes known as interpolation, is the process of transferring data from a coarse grid to a finer grid.
+
+This operator can often be represented by a matrix in 
+
+The simplest method of prolongation is an averaging procedure, which linearly interpolates the values in
+
+
+
+% How does oomph-lib do it?
+
+
+\begin{figure}
+	% \includegraphics[]{}
+	\caption{Prolongation and restriction operators acting on sample points}
+\end{figure}
+
+
+
+\subsection{Restriction}
+
+The `inverse' operation to prolongation is restriction, which is the process of transferring data from a fine grid to a coarser grid.
+Although the two 
+
+% Transpose of prolongation
+% Many choices, no need to use inverse of prolongation
+% Also called coarsening
+
+
+
+
+
+
+
+
+\subsection{Grid hierarchy}
 
 We will restrict our discussion to uniform structured grids in order to focus on the details of multigrid.
 Mathematically, we require only the grid hierarchy so the specific internals of the individual grids is a technical detail that we will omit. 
@@ -38,6 +135,17 @@ The grid hierarchy used by multigrid in \oomph is generated by...
 
 
 
+\begin{figure}
+	% \includegraphics[]{}
+	\caption{}
+\end{figure}
+
+
+
+
+
+%------------------------------------------------
+%------------------------------------------------
 
 \section{Multigrid as a preconditioner}
 
@@ -88,4 +196,12 @@ On its own, the linear solver is not as effective as the preconditioned linear s
 
 We reduce the tolerance of the mg solver and 
 
+
+
+
+
+%------------------------------------------------
+%------------------------------------------------
+
+\section{Analysis of multigrid}
 
