Add more sources.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,3 +34,57 @@
   year={2003},
   publisher={Springer Berlin Heidelberg}
 }
+
+@book{briggs,
+  title={A Multigrid Tutorial: Second Edition},
+  author={Briggs, W.L. and Henson, V.E. and McCormick, S.F.},
+  isbn={9780898714623},
+  lccn={87062333},
+  series={Other Titles in Applied Mathematics},
+  url={https://books.google.co.uk/books?id=oSTGBm64o1AC},
+  year={2000},
+  publisher={Society for Industrial and Applied Mathematics}
+}
+
+@article{iyengar,
+title = "A note on multigrid for the three-dimensional Poisson equation in cylindrical coordinates",
+journal = "Journal of Computational and Applied Mathematics",
+volume = "33",
+number = "2",
+pages = "163 - 169",
+year = "1990",
+issn = "0377-0427",
+doi = "https://doi.org/10.1016/0377-0427(90)90366-8",
+url = "http://www.sciencedirect.com/science/article/pii/0377042790903668",
+author = "Satteluri R.K. Iyengar and Anu Goyal",
+keywords = "Multigrid, defect correction, prolongation, restriction"
+}
+
+@misc{volker,
+	author={Volker John},
+	title={Multigrid Methods},
+	year={2013},
+	url="https://www.wias-berlin.de/people/john/LEHRE/MULTIGRID/multigrid.pdf"
+}
+
+@article{fgmres,
+author = {Saad, Y.},
+title = {A Flexible Inner-Outer Preconditioned GMRES Algorithm},
+journal = {SIAM Journal on Scientific Computing},
+volume = {14},
+number = {2},
+pages = {461-469},
+year = {1993},
+doi = {10.1137/0914028},
+
+URL = { 
+        https://doi.org/10.1137/0914028
+    
+},
+eprint = { 
+        https://doi.org/10.1137/0914028
+    
+}
+
+}
+
