Add reference for Krylov preconditioner.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -88,3 +88,31 @@ eprint = {
 
 }
 
+
+
+
+
+
+
+@article{elman,
+author = {Elman, H. and Ernst, O. and O'Leary, D.},
+title = {A Multigrid Method Enhanced by Krylov Subspace Iteration for Discrete Helmholtz Equations},
+journal = {SIAM Journal on Scientific Computing},
+volume = {23},
+number = {4},
+pages = {1291-1315},
+year = {2001},
+doi = {10.1137/S1064827501357190},
+
+URL = { 
+        https://doi.org/10.1137/S1064827501357190
+    
+},
+eprint = { 
+        https://doi.org/10.1137/S1064827501357190
+    
+}
+
+}
+
+
